fix: adjust image caption color for dark mode

--- a/src/index.css
+++ b/src/index.css
@@ -62,6 +62,7 @@
 }
 
 .card__caption {
+  color: #221d1dde;
   background-color: #fff;
   text-align: right;
   padding-inline-end: 2px;
